Fix history when there's an URL change without a corresponding loadStarted signal

This happens, for example, when the page uses the history API to trigger
a navigation. See https://bugreports.qt.io/browse/QTBUG-115589.

BUG: 467850